# ratingcalculator

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists.var  ClassDiagram.mmd  Readme.md  description.h
cmake/: BaseModule.cmake  CommonFunctions.cmake
core/: CMakeLists.var  description.h
core/include/core/: BaseException.hpp  EnumConverter.hpp  IDataStoreFactory.hpp  ITransportClient.hpp  ITransportServer.hpp  IUserDataStore.hpp  IUserDealDataStore.hpp  Model.hpp  MultiKeyVolatileContainer.hpp  SystemException.hpp  ThreadHelper.hpp  TimeHelper.hpp  Types.hpp
core/src/: BaseException.cpp  Model.cpp  SystemException.cpp  TimeHelper.cpp  ulog.c
core/test/: EnumConverter_test.cpp  MultiKeyVolatileContainer_test.cpp  TimeHelper_test.cpp
docs/: Doxygen
grpcapi/: CMakeLists.txt  CMakeLists.var
grpcapi/include/grpcapi/: GrpcTransportClient.hpp  GrpcTransportServer.hpp
grpcapi/proto/: rating.proto
grpcapi/src/: GrpcTransportClient.cpp  GrpcTransportServer.cpp
service/: CMakeLists.var  description.h
service/src/: Application.cpp  Application.hpp  ApplicationService.cpp  ApplicationService.hpp  UserRatingWatcher.cpp  UserRatingWatcher.hpp  main.cpp
tempstore/: CMakeLists.txt  CMakeLists.var  description.h
tempstore/include/tempstore/: DataStoreFactory.hpp  SortedUserDealStore.hpp  UserRatingProvider.hpp
tempstore/src/: DataStoreFactory.cpp  SortedUserDealStore.cpp  UserDataStore.cpp  UserDataStore.hpp  UserDealDataStore.cpp  UserDealDataStore.hpp  UserRatingProvider.cpp
tempstore/test/: UserDataStore_test.cpp
test/: smoke.sh
testClient/: CMakeLists.var  description.h
testClient/src/: RequestGenerator.cpp  RequestGenerator.hpp  TestUser.cpp  TestUser.hpp  UserSimulator.cpp  UserSimulator.hpp  main.cpp
webapi/: CMakeLists.var  description.h
webapi/include/webapi/serialization/: JsonDeserializer.hpp  JsonDeserializerModel.hpp  JsonDeserializerWsMessage.hpp  JsonSerializer.hpp  JsonSerializerModel.hpp  JsonSerializerWsMessage.hpp  SerializerException.hpp
webapi/include/webapi/transport/: Model.hpp  WsMessage.hpp  WsProtocol.hpp  WsTransportClient.hpp  WsTransportServer.hpp
webapi/include/webapi/websockets/: client_ws.hpp  server_ws.hpp
webapi/src/transport/: Model.cpp  WsMessage.cpp  WsProtocol.cpp  WsTransportClient.cpp  WsTransportServer.cpp
webapi/test/: ModelSerialization_test.cpp  WsMessageSerialization_test.cpp
